tests/ui-msrv/diagnostic-not-implemented-unaligned.stderr
error[E0277]: the trait bound `NotZerocopy: Unaligned` is not satisfied
  --> tests/ui-msrv/diagnostic-not-implemented-unaligned.rs:18:23
   |
18 |     takes_unaligned::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `Unaligned` is not implemented for `NotZerocopy`
   |
   = help: the following other types implement trait `Unaligned`:
             ()
             AtomicBool
             AtomicI8
             AtomicU8
             F32<O>
             F64<O>
             I128<O>
             I16<O>
           and $N others
note: required by a bound in `takes_unaligned`
  --> tests/ui-msrv/diagnostic-not-implemented-unaligned.rs:21:23
   |
21 | fn takes_unaligned<T: Unaligned>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_unaligned`
